--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,23 +6,35 @@ on:
 
 jobs:
   test:
-    name: "Test on ${{ matrix.os }}"
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+    name: "Test on ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
+
+    - name: Build protobuf
+      run: |
+        wget -q -O- https://github.com/protocolbuffers/protobuf/releases/download/v3.14.0/protobuf-cpp-3.14.0.tar.gz | tar xf -
+        cd protobuf-*
+        ./configure --disable-shared
+        sudo make install
+
+    - name: Install other dependencies
+      run: |
+        sudo apt-get install libncursesw5-dev
+
     - name: Initialize Java
       uses: actions/setup-java@v1
       with:
         java-version: 15
+
     - name: Checkout root repository
       uses: actions/checkout@v2
       with:
         repository: sandpolis/sandpolis
+
     - name: Checkout submodules
       run: |
         git submodule update --init --remote --merge com.sandpolis.agent.micro
+
     - name: Execute build
       run: |
         ./gradlew :com.sandpolis.agent.micro:build
