Attempt to use libprotobuf from repos instead of building from source

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,17 +15,9 @@ jobs:
         sudo ln -sf /usr/bin/gcc-10 /usr/local/sbin/gcc
         g++ --version
         gcc --version
-    - name: Build protobuf
+    - name: Install dependencies
       run: |
-        wget -q -O- https://github.com/protocolbuffers/protobuf/releases/download/v3.14.0/protobuf-cpp-3.14.0.tar.gz | tar xzf -
-        cd protobuf-*
-        ./configure --disable-shared
-        sudo make install
-        cd ..
-        sudo rm -rf protobuf-*
-    - name: Install other dependencies
-      run: |
-        sudo apt-get install libncursesw5-dev
+        sudo apt-get install libncursesw5-dev libprotobuf-dev
     - name: Initialize Java
       uses: actions/setup-java@v1
       with:
@@ -39,4 +31,9 @@ jobs:
         git submodule update --init --remote --merge com.sandpolis.agent.micro
     - name: Execute build
       run: |
-        gradle --no-daemon :com.sandpolis.agent.micro:build
+        gradle --no-daemon :com.sandpolis.agent.micro:assembleRelease
+    - name: Save artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: linux-x86_64
+        path: com.sandpolis.agent.micro/build/exe/main/release/stripped/com.sandpolis.agent.micro
